--- a/source/BNFC.cabal
+++ b/source/BNFC.cabal
@@ -281,6 +281,7 @@ library
     BNFC.Backend.Koka
     BNFC.Backend.Koka.CFtoKokaAST
     BNFC.Backend.Koka.CFtoParse
+    BNFC.Backend.Koka.Common
 
 ----- Testing --------------------------------------------------------------
 
